--- a/identification.html
+++ b/identification.html
@@ -8,7 +8,7 @@
 <body>
 <div class="sidebar">
   <h2 >EmotionWise</h2>
-  <a href="index.html">Home</a>
+  <a href="indexfile.html">Home</a>
   <a href="secondary.html">Secondary Emotions</a>
   <a href="identification.html">Emotion Identification</a>
   <a href="reflection.html">Reflection</a>
@@ -16,7 +16,7 @@
   <a href="worksheets.html">Worksheets</a>
 </div>
 <div class="content">
-  <h1  style="text-align: center;background-color:#1e90ff ; padding: 10px; text-align: center;">Emotion Identification</h1>
+  <h1  style="text-align: center;color: white;background-color:#1e90ff ; padding: 10px; text-align: center;">Emotion Identification</h1>
 
   <b><p>Recognizing Emotional Triggers</p></b>
 
@@ -37,7 +37,9 @@ A trigger is an event, situation, or stimulus that causes a specific reaction, e
 <br>
 
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQL1q8h96JOc0zOtKb9QQB2XvjmCLu5JZsHqj-8Q0_VVueq2mTNoFHgN7_WyXhve6Fo_8bDTgoBzke/pubhtml?widget=true&amp;headers=false"style="width: 100%;height: 200px;border: none;"></iframe>
-
+<a href="https://docs.google.com/spreadsheets/d/1Gw6QF384qb5KhQWvILa7-1V2y5KyiwxwF7MoITx3fKc/edit?usp=drive_link""target="_blank">
+  <button>Edit Worksheet</button>
+</a>
 
 <b><p>Physical and Mental Signs of Emotions</p></b>
 <p>Note how your body and mind react to different emotions.
@@ -121,6 +123,9 @@ A trigger is an event, situation, or stimulus that causes a specific reaction, e
 
  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQLKRJRq39u6YbExM_pTQn3sOgwKti2MNOFpp0gOKtui1e6FphMn3f70aceHb1vOcgnyFM1CzpMt3lJ/pubhtml?widget=true&amp;headers=false"style="width: 100%; height: 200px; border: none;"></iframe>
 </p>
+<a href="https://docs.google.com/spreadsheets/d/1zFoy0pLzSpFdcU4QieO8Fo4EVFPY1oCHA5dWws-vJKw/edit?usp=drive_link"target="_blank">
+  <button>Edit Worksheet</button>
+</a>
 
 <title>Emotional Regulation Techniques</title>
 </head>
@@ -200,7 +205,9 @@ A trigger is an event, situation, or stimulus that causes a specific reaction, e
 
 
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQe1sJj7UpZN9gl0cn8LZCPTzyGUn7dMEjaZ-_faJ08nzp7C-lz_DU2KOWxHPGdpWH31-8gavjL5ZYH/pubhtml?widget=true&amp;headers=false"style="width: 100%; height: 200px; border: none;"></iframe>
-
+<a href="https://docs.google.com/spreadsheets/d/1Wb0vsPA_fQ3OVpR6sCX7WxwwDslEHr6DDy8JkfAoXbA/edit?usp=drivesdky" target="_blank">
+  <button>Edit Worksheet</button>
+</a>
 </div>
 </body>
-</html>
+                                         </html>
